--- a/stats-preview-card-component-main/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -15,15 +14,28 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Get insights that help your business grow. Discover the benefits of data
-    analytics and make better decisions regarding revenue, customer experience,
-    and overall efficiency. 10k+ companies 314 templates 12m+ queries
+    <h2>Get insights that help your business grow.</h2>
+
+    <p>
+      Discover the benefits of data analytics and make better decisions
+      regarding revenue, customer experience, and overall efficiency.
+    </p>
+
+    <div>
+      <div>10k+ companies</div>
+      <div>314 templates</div>
+      <div>12m+ queries</div>
+    </div>
 
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a href="https://www.frontendmentor.io/profile/Dimma-Joel" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a
+        href="https://github.com/Dimma-Joel/frontend-mentor-challenges/tree/main/stats-preview-card-component-main/stats-preview-card-component-main"
+        >Dimma Joel</a
+      >.
     </div>
   </body>
 </html>
