Wrapped my contents in a main tag and added image

--- a/stats-preview-card-component-main/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/index.html
@@ -14,28 +14,33 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>Get insights that help your business grow.</h2>
+    <main>
+      <img src="images/image-header-mobile.jpg" alt="Header Image" />
+      <h2>Get insights that help your business grow.</h2>
 
-    <p>
-      Discover the benefits of data analytics and make better decisions
-      regarding revenue, customer experience, and overall efficiency.
-    </p>
+      <p>
+        Discover the benefits of data analytics and make better decisions
+        regarding revenue, customer experience, and overall efficiency.
+      </p>
 
-    <div>
-      <div>10k+ companies</div>
-      <div>314 templates</div>
-      <div>12m+ queries</div>
-    </div>
+      <div>
+        <div>10k+ companies</div>
+        <div>314 templates</div>
+        <div>12m+ queries</div>
+      </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io/profile/Dimma-Joel" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a
-        href="https://github.com/Dimma-Joel/frontend-mentor-challenges/tree/main/stats-preview-card-component-main/stats-preview-card-component-main"
-        >Dimma Joel</a
-      >.
-    </div>
+      <div class="attribution">
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io/profile/Dimma-Joel"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://github.com/Dimma-Joel/frontend-mentor-challenges/tree/main/stats-preview-card-component-main/stats-preview-card-component-main"
+          >Dimma Joel</a
+        >.
+      </div>
+    </main>
   </body>
 </html>
