--- a/stats-preview-card-component-main/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
@@ -14,10 +13,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
+    <main class="container">
       <img src="images/image-header-mobile.jpg" alt="Header Image" />
       <h2>Get insights that help your business grow.</h2>
-
       <p>
         Discover the benefits of data analytics and make better decisions
         regarding revenue, customer experience, and overall efficiency.
