--- a/stats-preview-card-component-main/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/index.html
@@ -14,19 +14,35 @@
   </head>
   <body>
     <main class="container">
-      <img src="images/image-header-mobile.jpg" alt="Header Image" />
-      <h2>Get insights that help your business grow.</h2>
+      <div class="img-container">
+        <div class="overlay"></div>
+      </div>
+
+      <h2>Get <span>insights</span> that help your business grow.</h2>
       <p>
         Discover the benefits of data analytics and make better decisions
         regarding revenue, customer experience, and overall efficiency.
       </p>
 
-      <div>
-        <div>10k+ companies</div>
-        <div>314 templates</div>
-        <div>12m+ queries</div>
-      </div>
+      <div class="company-stats-main-container">
+        <div class="company-stats-sub-container">
+          <div class="company-stats-number">10k+</div>
+          <div class="company-stats-factor">companies</div>
+        </div>
 
+        <div class="company-stats-sub-container">
+          <div class="company-stats-number">314</div>
+          <div class="company-stats-factor">templates</div>
+        </div>
+
+        <div class="company-stats-sub-container">
+          <div class="company-stats-number">12m</div>
+          <div class="company-stats-factor">queries</div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
       <div class="attribution">
         Challenge by
         <a
@@ -39,6 +55,6 @@
           >Dimma Joel</a
         >.
       </div>
-    </main>
+    </footer>
   </body>
 </html>
