Styled the footer

--- a/stats-preview-card-component-main/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/stats-preview-card-component-main/index.html
@@ -18,26 +18,28 @@
         <div class="overlay"></div>
       </div>
 
-      <h2>Get <span>insights</span> that help your business grow.</h2>
-      <p>
-        Discover the benefits of data analytics and make better decisions
-        regarding revenue, customer experience, and overall efficiency.
-      </p>
+      <div>
+        <h2>Get <span>insights</span> that help your business grow.</h2>
+        <p>
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
 
-      <div class="company-stats-main-container">
-        <div class="company-stats-sub-container">
-          <div class="company-stats-number">10k+</div>
-          <div class="company-stats-factor">companies</div>
-        </div>
+        <div class="company-stats-main-container">
+          <div class="company-stats-sub-container">
+            <div class="company-stats-number">10k+</div>
+            <div class="company-stats-factor">companies</div>
+          </div>
 
-        <div class="company-stats-sub-container">
-          <div class="company-stats-number">314</div>
-          <div class="company-stats-factor">templates</div>
-        </div>
+          <div class="company-stats-sub-container">
+            <div class="company-stats-number">314</div>
+            <div class="company-stats-factor">templates</div>
+          </div>
 
-        <div class="company-stats-sub-container">
-          <div class="company-stats-number">12m</div>
-          <div class="company-stats-factor">queries</div>
+          <div class="company-stats-sub-container">
+            <div class="company-stats-number">12m</div>
+            <div class="company-stats-factor">queries</div>
+          </div>
         </div>
       </div>
     </main>
