--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -3,19 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Social links profile</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
+    <!-- <style>
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -23,27 +18,31 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="src/output.css" />
   </head>
 
-  <body>
-    <main>
-      <h2>Jessica Randall</h2>
-      <h6>London, United Kingdom</h6>
-      <p>"Front-end developer and avid reader."</p>
+  <body class="bg-[hsl(0_0%_8%)]">
+    <section class="h-screen flex justify-center items-center text-white">
+      <main>
+        <img src="assets/images/avatar-jessica.jpeg" alt="Profile picture" />
+        <h2>Jessica Randall</h2>
+        <h6>London, United Kingdom</h6>
+        <p>"Front-end developer and avid reader."</p>
 
-      <a>GitHub</a>
-      <a>Frontend Mentor</a>
-      <a>LinkedIn</a>
-      <a>Twitter</a>
-      <a>Instagram</a>
-    </main>
+        <a>GitHub</a>
+        <a>Frontend Mentor</a>
+        <a>LinkedIn</a>
+        <a>Twitter</a>
+        <a>Instagram</a>
+      </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      <!-- <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div> -->
+    </section>
   </body>
 </html>
