--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -19,30 +19,68 @@
         color: hsl(228, 45%, 44%);
       }
     </style> -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    /> -->
     <link rel="stylesheet" href="src/output.css" />
   </head>
 
   <body class="bg-[hsl(0_0%_8%)]">
-    <section class="h-screen flex justify-center items-center text-white">
-      <main>
-        <img src="assets/images/avatar-jessica.jpeg" alt="Profile picture" />
-        <h2>Jessica Randall</h2>
-        <h6>London, United Kingdom</h6>
-        <p>"Front-end developer and avid reader."</p>
+    <main
+      class="flex justify-center items-center text-white mt-23 mb-23 ml-5 mr-5"
+    >
+      <article
+        class="bg-[hsl(0_0%_12%)] text-center pt-6 w-[375px] rounded-[12px]"
+      >
+        <img
+          src="assets/images/avatar-jessica.jpeg"
+          alt="Profile picture"
+          class="mx-auto w-23 h-23 rounded-full"
+        />
+        <h2 class="font-semibold pt-7 text-3xl">Jessica Randall</h2>
+        <h6 class="pt-1.5 text-[hsl(75_94%_57%)] font-medium">
+          London, United Kingdom
+        </h6>
+        <p class="pt-6">"Front-end developer and avid reader."</p>
 
-        <a>GitHub</a>
-        <a>Frontend Mentor</a>
-        <a>LinkedIn</a>
-        <a>Twitter</a>
-        <a>Instagram</a>
-      </main>
+        <ul class="pt-6">
+          <li
+            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+          >
+            <a>GitHub</a>
+          </li>
+          <li
+            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+          >
+            <a>Frontend Mentor</a>
+          </li>
+          <li
+            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+          >
+            <a>LinkedIn</a>
+          </li>
+          <li
+            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+          >
+            <a>Twitter</a>
+          </li>
+          <li
+            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-6 font-medium"
+          >
+            <a>Instagram</a>
+          </li>
+        </ul>
+      </article>
+    </main>
 
-      <!-- <div class="attribution">
+    <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>.
       </div> -->
-    </section>
   </body>
 </html>
