Modifications to Location

--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -19,12 +19,6 @@
         color: hsl(228, 45%, 44%);
       }
     </style> -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    /> -->
     <link rel="stylesheet" href="src/output.css" />
   </head>
 
@@ -40,8 +34,8 @@
           alt="Profile picture"
           class="mx-auto w-23 h-23 rounded-full"
         />
-        <h2 class="font-semibold pt-7 text-3xl">Jessica Randall</h2>
-        <h6 class="pt-1.5 text-[hsl(75_94%_57%)] font-medium">
+        <h2 class="font-semibold pt-7 text-[26px]">Jessica Randall</h2>
+        <h6 class="pt-1.5 text-[hsl(75_94%_57%)] font-medium text-[15px]">
           London, United Kingdom
         </h6>
         <p class="pt-6">"Front-end developer and avid reader."</p>
