Added socail links

--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -41,31 +41,46 @@
         <p class="pt-6">"Front-end developer and avid reader."</p>
 
         <ul class="pt-6">
-          <li
-            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+          <a href="https://github.com/Dimma-Joel"
+            ><li
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+            >
+              GitHub
+            </li></a
           >
-            <a>GitHub</a>
-          </li>
-          <li
-            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+
+          <a href="https://www.frontendmentor.io/profile/Dimma-Joel"
+            ><li
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+            >
+              Frontend Mentor
+            </li></a
           >
-            <a>Frontend Mentor</a>
-          </li>
-          <li
-            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+
+          <a
+            href="https://www.linkedin.com/in/dimma-joel-technology-front-end-developer-technical-writer/"
+            ><li
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+            >
+              LinkedIn
+            </li></a
           >
-            <a>LinkedIn</a>
-          </li>
-          <li
-            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+
+          <a href="https://x.com/devdimma"
+            ><li
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+            >
+              Twitter
+            </li></a
           >
-            <a>Twitter</a>
-          </li>
-          <li
-            class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-6 font-medium"
+
+          <a href="https://www.instagram.com/devdimma?igsh=MXE4eDQ1eDRzY2ZyZg=="
+            ><li
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-6 font-medium"
+            >
+              Instagram
+            </li></a
           >
-            <a>Instagram</a>
-          </li>
         </ul>
       </article>
     </main>
