--- a/social-links-profile-main/social-links-profile-main/index.html
+++ b/social-links-profile-main/social-links-profile-main/index.html
@@ -10,21 +10,12 @@
       href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Social links profile</title>
-    <!-- <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style> -->
     <link rel="stylesheet" href="src/output.css" />
   </head>
 
   <body class="bg-[hsl(0_0%_8%)]">
     <main
-      class="flex justify-center items-center text-white mt-23 mb-23 ml-5 mr-5"
+      class="flex justify-center items-center text-white mt-23 mb-15 ml-5 mr-5"
     >
       <article
         class="bg-[hsl(0_0%_12%)] text-center pt-6 w-[375px] rounded-[12px]"
@@ -43,7 +34,7 @@
         <ul class="pt-6">
           <a href="https://github.com/Dimma-Joel"
             ><li
-              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium hover:bg-[hsl(75_94%_57)] hover:text-[hsl(0_0%_20%)]"
             >
               GitHub
             </li></a
@@ -51,7 +42,7 @@
 
           <a href="https://www.frontendmentor.io/profile/Dimma-Joel"
             ><li
-              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium hover:bg-[hsl(75_94%_57)] hover:text-[hsl(0_0%_20%)]"
             >
               Frontend Mentor
             </li></a
@@ -60,7 +51,7 @@
           <a
             href="https://www.linkedin.com/in/dimma-joel-technology-front-end-developer-technical-writer/"
             ><li
-              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium hover:bg-[hsl(75_94%_57)] hover:text-[hsl(0_0%_20%)]"
             >
               LinkedIn
             </li></a
@@ -68,7 +59,7 @@
 
           <a href="https://x.com/devdimma"
             ><li
-              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium"
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-4 font-medium hover:bg-[hsl(75_94%_57)] hover:text-[hsl(0_0%_20%)]"
             >
               Twitter
             </li></a
@@ -76,7 +67,7 @@
 
           <a href="https://www.instagram.com/devdimma?igsh=MXE4eDQ1eDRzY2ZyZg=="
             ><li
-              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-6 font-medium"
+              class="bg-[hsl(0_0%_20%)] w-[290px] mx-auto p-3 rounded-[8px] mb-6 font-medium hover:bg-[hsl(75_94%_57)] hover:text-[hsl(0_0%_20%)]"
             >
               Instagram
             </li></a
@@ -85,11 +76,19 @@
       </article>
     </main>
 
-    <!-- <div class="attribution">
+    <footer>
+      <p class="text-center text-[hsl(0_0%_100%)] mb-7 text-[11px]">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a
+          href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ"
+          target="_blank"
+          class="text-[hsl(75_94%_57)]"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </div> -->
+        >. Coded by
+        <a href="https://github.com/Dimma-Joel" class="text-[hsl(75_94%_57)]"
+          >Dimma Joel</a
+        >.
+      </p>
+    </footer>
   </body>
 </html>
