--- a/3-column-preview-card-component-main/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/3-column-preview-card-component-main/index.html
@@ -12,54 +12,55 @@
 
     <title>Frontend Mentor | 3-column preview card component</title>
     <link rel="stylesheet" href="src/styles.css" />
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Lexend+Deca:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <main>
-      <section>
+      <section class="first-section">
+        <img src="images/icon-sedans.svg" alt="Sedans" />
         <h2>Sedans</h2>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal
           for cruising in the city or on your next road trip.
         </p>
-        <button>Learn More</button>
+        <button class="first-button">Learn More</button>
       </section>
 
-      <section>
+      <section class="second-section">
+        <img src="images/icon-suvs.svg" alt="SUVs Icon" />
         <h2>SUVs</h2>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect
           for your next family vacation and off-road adventures.
         </p>
-        <button>Learn More</button>
+        <button class="second-button">Learn More</button>
       </section>
 
-      <section>
+      <section class="third-section">
+        <img src="images/icon-luxury.svg" alt="Luxury Icon" />
         <h2>Luxury</h2>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the
           enhanced comfort of a luxury rental and arrive in style.
         </p>
-        <button>Learn More</button>
+        <button class="third-button">Learn More</button>
       </section>
-
-      <footer>
-        <p class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="#">Dimma Joel</a>.
-        </p>
-      </footer>
     </main>
+
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Dimma Joel</a>.
+      </p>
+    </footer>
   </body>
 </html>
