--- a/blog-preview-card-main/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/blog-preview-card-main/index.html
@@ -16,15 +16,34 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Learning Published 21 Dec 2023 HTML & CSS foundations These languages are
-    the backbone of every website, defining structure, content, and
-    presentation. Greg Hooper
+    <main>
+      <img src="assets/images/illustration-article.svg" alt="" />
+      <p>Learning</p>
+      <p>Published 21 Dec 2023</p>
+      <h2>HTML & CSS foundations</h2>
+      <p>
+        These languages are the backbone of every website, defining structure,
+        content, and presentation.
+      </p>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      <section>
+        <img src="assets/images/image-avatar.webp" alt="" />
+        <span>Greg Hooper</span>
+      </section>
+    </main>
+
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io/challenges/blog-preview-card-ckPaj01IcS"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://portfolio-website-six-bice-55.vercel.app/"
+          >Dimma Joel</a
+        >.
+      </p>
+    </footer>
   </body>
 </html>
