--- a/blog-preview-card-main/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/blog-preview-card-main/index.html
@@ -12,23 +12,35 @@
       href="./assets/images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Blog preview card</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
-      <img src="assets/images/illustration-article.svg" alt="" />
-      <p>Learning</p>
-      <p>Published 21 Dec 2023</p>
-      <h2>HTML & CSS foundations</h2>
+      <img
+        src="assets/images/illustration-article.svg"
+        alt="Main Image"
+        class="main-image"
+      />
+
+      <p class="learning">Learning</p>
+      <p class="publish-date">Published 21 Dec 2023</p>
+      <h2 class="course">HTML & CSS foundations</h2>
       <p>
         These languages are the backbone of every website, defining structure,
-        content, and presentation.
+        content, and presentation
       </p>
 
       <section>
-        <img src="assets/images/image-avatar.webp" alt="" />
-        <span>Greg Hooper</span>
+        <img src="assets/images/image-avatar.webp" alt="Author's Image" />
+        <p>Greg Hooper</p>
       </section>
     </main>
 
