Finished styling the project

--- a/blog-preview-card-main/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/blog-preview-card-main/index.html
@@ -33,12 +33,12 @@
       <p class="learning">Learning</p>
       <p class="publish-date">Published 21 Dec 2023</p>
       <h2 class="course">HTML & CSS foundations</h2>
-      <p>
+      <p class="explanation">
         These languages are the backbone of every website, defining structure,
         content, and presentation
       </p>
 
-      <section>
+      <section class="author">
         <img src="assets/images/image-avatar.webp" alt="Author's Image" />
         <p>Greg Hooper</p>
       </section>
