Structured the project with html5

--- a/nft-preview-card-component-main/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/index.html
@@ -11,23 +11,35 @@
     />
     <title>Frontend Mentor | NFT preview card component</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
 
   <body>
+    <img
+      src="images/image-equilibrium.jpg"
+      alt="Equilibrium Image"
+      width="604px"
+      height="604px"
+    />
     <h2>Equilibrium #3429</h2>
     <p>Our Equilibrium collection promotes balance and calm.</p>
-    <p>0.041 ETH</p>
-    <p>3 days left</p>
-    <p>Creation of Jules Wyvern</p>
+
+    <section>
+      <img src="images/icon-ethereum.svg" alt="Ethereum Icon" /><span
+        >0.041 ETH</span
+      >
+    </section>
+
+    <section>
+      <img src="images/icon-clock.svg" alt="Clock" />
+      <span>3 days left</span>
+    </section>
+
+    <hr />
+
+    <section>
+      <img src="images/image-avatar.png" alt="Avatar" />
+      <span>Creation of Jules Wyvern</span>
+    </section>
 
     <div class="attribution">
       Challenge by
