Finished the mobile version

--- a/nft-preview-card-component-main/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/index.html
@@ -34,6 +34,7 @@
       <article class="ethereum-details-container">
         <section class="ethereum-details">
           <img src="images/icon-ethereum.svg" alt="Ethereum Icon" /><span
+            class="eth-price"
             >0.041 ETH</span
           >
         </section>
@@ -46,9 +47,12 @@
 
       <hr />
 
-      <section>
-        <img src="images/image-avatar.png" alt="Avatar" />
-        <span>Creation of Jules Wyvern</span>
+      <section class="ethereum-details avatar-details">
+        <img src="images/image-avatar.png" alt="Avatar" class="avatar-image" />
+
+        <p class="avatar-creation">
+          Creation of <span class="avatar-name">Jules Wyvern</span>
+        </p>
       </section>
     </main>
 
