Finished desktop version

--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -69,7 +69,10 @@
         href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ"
         target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Dimma Joel</a>.
+      >. Coded by
+      <a href="https://vercel.com/dimma-joels-projects/portfolio-website"
+        >Dimma Joel</a
+      >.
     </div>
   </body>
 </html>
